; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/mellanox/mlx5/core/en/xsk/extr_setup.c_mlx5e_xsk_redirect_rqt_to_channel.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/mellanox/mlx5/core/en/xsk/extr_setup.c_mlx5e_xsk_redirect_rqt_to_channel.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mlx5e_priv = type { i32 }
%struct.mlx5e_channel = type { %struct.TYPE_2__, i32 }
%struct.TYPE_2__ = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mlx5e_xsk_redirect_rqt_to_channel(%struct.mlx5e_priv* %0, %struct.mlx5e_channel* %1) #0 {
  %3 = alloca %struct.mlx5e_priv*, align 8
  %4 = alloca %struct.mlx5e_channel*, align 8
  store %struct.mlx5e_priv* %0, %struct.mlx5e_priv** %3, align 8
  store %struct.mlx5e_channel* %1, %struct.mlx5e_channel** %4, align 8
  %5 = load %struct.mlx5e_priv*, %struct.mlx5e_priv** %3, align 8
  %6 = load %struct.mlx5e_channel*, %struct.mlx5e_channel** %4, align 8
  %7 = getelementptr inbounds %struct.mlx5e_channel, %struct.mlx5e_channel* %6, i32 0, i32 1
  %8 = load i32, i32* %7, align 4
  %9 = load %struct.mlx5e_channel*, %struct.mlx5e_channel** %4, align 8
  %10 = getelementptr inbounds %struct.mlx5e_channel, %struct.mlx5e_channel* %9, i32 0, i32 0
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = call i32 @mlx5e_redirect_xsk_rqt(%struct.mlx5e_priv* %5, i32 %8, i32 %12)
  ret i32 %13
}

declare dso_local i32 @mlx5e_redirect_xsk_rqt(%struct.mlx5e_priv*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
